# RAG-Learning

./: .gitignore  del.ipynb  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1_dataingestion.ipynb  2_data_parsing_pdf.ipynb  3_data_parsing_docs.ipynb  4_data_parsing_csv_excel.ipynb  5_data_parsing_json.ipynb  6_data_parsing_db.ipynb
0-DataIngestParsing/data/databases/: company.db
0-DataIngestParsing/data/docs/: paper.docx
0-DataIngestParsing/data/json_files/: company_data.json  events.jsonl
0-DataIngestParsing/data/structured_files/: inventory.xlsx  products.csv
0-DataIngestParsing/data/text_files/: ramayana_summary.txt
0-DataIngestParsing/data/word_files/: proposal.docx  proposal.txt  ~$oposal.docx
1-VectorEmbeddings&Databases/: embedding.ipynb  openai_embeddings.ipynb
2-Vector Stores/: 1-chromadb.ipynb  2-faiss.ipynb  3-OtherVectorStores.ipynb  4-Datastax.ipynb  5-pinecone.ipynb
2-Vector Stores/chroma_db/: chroma.sqlite3
2-Vector Stores/faiss_index/: index.faiss  index.pkl
3-AdvancedChunking/: 1-SemanticChunking.ipynb  langchain_intro.txt
4-HybridSearchStrategies/: 1-DenseSparse.ipynb
