[project]
name = "ragudemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.5",
    "datasets>=4.4.1",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.0",
    "huggingface-hub>=0.36.0",
    "jq>=1.10.0",
    "langchain>=1.1.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "matplotlib>=3.10.7",
    "msoffcrypto-tool>=5.4.2",
    "openpyxl>=3.1.5",
    "packaging>=24.2",
    "pandas>=2.3.3",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
    "unstructured[docs]>=0.18.21",
    "urllib3>=2.5.0",
]
